Rydding - delta brukere sletting

--- a/twig/delta_brukere/home.html.twig
+++ b/twig/delta_brukere/home.html.twig
@@ -1,4 +1,5 @@
 {% if tel != null %}
+<div class="col-xs-12">
 <div>
     <h1>Du er i ferd med å slette en bruker i påmeldingssystemet</h1>
     <h5>I tillegg må du bruke et passord for å fullføre prosessen</h5>
@@ -41,7 +42,7 @@
     </form>
 </div>
 {% endif %}
-
+</div>
 
 <style>
     .deltaBruker {
@@ -52,9 +53,6 @@
     }
     .deltaBruker p {
         margin: 0;
-    }
-    .search-brukere {
-        margin-top: 40px;
     }
     .slett-delta-bruker-collapse {
         display: none;
