Litt mer beskrivelse

--- a/twig/delta_brukere/home.html.twig
+++ b/twig/delta_brukere/home.html.twig
@@ -21,7 +21,9 @@
                 </p>
                 <div class="collapse" id="collapseExample">
                     <br>
-                    <p class="danger">Er du sikker at du vil slette denne brukeren. <b style="color: #dc3545">Denne prosessen er irreversibel</b>.</p>
+                    <span class="muted">HUSK: personlig informasjon som identifiserer brukere slettes men ikke elementet fra databasen.</span>
+                    <br>
+                    <p class="danger">Er du sikker at du vil slette denne brukeren. <b style="color: #dc3545">Denne prosessen er irreversibel.</b></p>
                     <input name="password" type="password" placeholder="passord">
                     <input class="btn btn-ukm btn-sm btn-danger" type="submit" value="Slett">
                 </div>
@@ -36,7 +38,9 @@
 <div class="col-xs-12 search-brukere">
     <form action="" method="post">
         <h1>VIKTIG: Dette er ment til å bli brukt av super admin brukere</h1>
-        <p>Her kan du søke brukere fra Delta - påmeldingssystemet</p>
+        <br>
+        <br>
+        <p>Her kan du søke brukere på Delta - påmeldingssystemet</p>
         <input name="tel" type="text" placeholder="mobil">
         <input class="btn btn-ukm btn-sm btn-success" type="submit" value="Søk" >
     </form>
